--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "type": "module",
   "devDependencies": {
-    "hardhat": "^2.22.10",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
-    "ethers": "^6.13.2",
+    "@openzeppelin/contracts": "^5.0.2",
     "dotenv": "^16.4.5",
-    "@openzeppelin/contracts": "^5.0.2"
+    "ethers": "^6.13.2",
+    "hardhat": "^2.22.10"
+  },
+  "dependencies": {
+    "@nomicfoundation/hardhat-verify": "^3.0.10",
+    "chart.js": "^4.5.1",
+    "i18next": "^25.8.4",
+    "i18next-browser-languagedetector": "^8.2.0"
   }
 }
