--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "aegis-coin",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@openzeppelin/contracts": "^5.0.2",
@@ -12,6 +15,7 @@
   "dependencies": {
     "@nomicfoundation/hardhat-verify": "^3.0.10",
     "chart.js": "^4.5.1",
+    "express": "^4.19.2",
     "i18next": "^25.8.4",
     "i18next-browser-languagedetector": "^8.2.0"
   }
