--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@nomicfoundation/hardhat-verify": "^2.1.3",
     "@openzeppelin/contracts": "^5.0.2",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
-    "hardhat": "^2.22.10"
+    "hardhat": "^2.28.5"
   },
   "dependencies": {
     "chart.js": "^4.5.1",
