--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@nomicfoundation/hardhat-verify": "^2.1.3",
     "@openzeppelin/contracts": "^5.0.2",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
     "ethers": "^6.13.2",
     "hardhat": "^2.28.5"
   },
   "dependencies": {
+    "@coinbase/cdp-sdk": "^1.44.0",
     "chart.js": "^4.5.1",
     "express": "^4.19.2",
     "i18next": "^25.8.4",
