--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@nomicfoundation/hardhat-verify": "^2.1.3",
     "@openzeppelin/contracts": "^5.0.2",
+    "@types/node": "^25.2.3",
     "dotenv": "^16.6.1",
     "ethers": "^6.13.2",
-    "hardhat": "^2.28.5"
+    "hardhat": "^2.28.5",
+    "tsc-alias": "^1.8.16",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@coinbase/cdp-sdk": "^1.44.0",
+    "@coinbase/onchainkit": "^1.1.2",
     "chart.js": "^4.5.1",
     "express": "^4.19.2",
     "i18next": "^25.8.4",
