--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "ethers": "^6.16.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "viem": "^2.45.3",
     "wagmi": "^2.19.5"
   },
