--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "concurrently \"node server.js\" \"node scripts/autonomous_airdrop.js\"",
     "dev": "cd frontend && npm run dev",
     "build": "cd frontend && npm install && npm run build"
   },
@@ -23,6 +23,7 @@
     "@coinbase/cdp-sdk": "^1.44.0",
     "@coinbase/onchainkit": "^1.1.2",
     "chart.js": "^4.5.1",
+    "concurrently": "^9.2.1",
     "express": "^4.19.2",
     "i18next": "^25.8.4",
     "i18next-browser-languagedetector": "^8.2.0"
