--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@tanstack/react-query": "^5.90.21",
     "ethers": "^6.16.0",
+    "i18next": "^25.8.5",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.5.4",
     "viem": "^2.45.3",
     "wagmi": "^2.19.5"
   },
