--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@tanstack/react-query": "^5.90.21",
     "ethers": "^6.16.0",
+    "framer-motion": "^12.34.0",
     "gun": "^0.2020.1241",
+    "howler": "^2.2.4",
     "i18next": "^25.8.5",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.2.0",
